--- a/twog/twog/twog.csproj
+++ b/twog/twog/twog.csproj
@@ -45,7 +45,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Background.cs" />
+    <Compile Include="Tiles\Background.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Player\PlayerCamera.cs" />
     <Compile Include="Player\PlayerCameraStaticBound.cs" />
@@ -53,7 +53,7 @@
     <Compile Include="Player\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GFX.cs" />
+    <Compile Include="Logic\GFX.cs" />
     <Compile Include="Scenes\TestScene.cs" />
   </ItemGroup>
   <ItemGroup>
