--- a/twog/twog/twog.csproj
+++ b/twog/twog/twog.csproj
@@ -49,6 +49,8 @@
     <Compile Include="House.cs" />
     <Compile Include="Door.cs" />
     <Compile Include="NarBox\NarBox.cs" />
+    <Compile Include="Player\PlayerInteractor.cs" />
+    <Compile Include="Scenes\Scene1.cs" />
     <Compile Include="Tiles\Background.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Player\PlayerCamera.cs" />
@@ -58,7 +60,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Logic\GFX.cs" />
-    <Compile Include="Scenes\TestScene.cs" />
+    <Compile Include="Scenes\Scene0.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
