Fixed camera and player so they don't go out of bounds of my map

--- a/twog/twog/twog.csproj
+++ b/twog/twog/twog.csproj
@@ -46,8 +46,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Logic\GAccess.cs" />
-    <Compile Include="House.cs" />
-    <Compile Include="Door.cs" />
+    <Compile Include="Tiles\House.cs" />
+    <Compile Include="Tiles\Door.cs" />
     <Compile Include="NarBox\NarBox.cs" />
     <Compile Include="Player\PlayerInteractor.cs" />
     <Compile Include="Scenes\Scene1.cs" />
