--- a/twog/twog/twog.csproj
+++ b/twog/twog/twog.csproj
@@ -48,13 +48,15 @@
     <Compile Include="Dialogue\CoDialogue.cs" />
     <Compile Include="Dialogue\DialogueInfo.cs" />
     <Compile Include="Dialogue\DialogueData.cs" />
+    <Compile Include="Entities\Monsters.cs" />
     <Compile Include="Entities\NPC.cs" />
     <Compile Include="Logic\GAccess.cs" />
-    <Compile Include="Scenes\Scene2.cs" />
     <Compile Include="Entities\House.cs" />
     <Compile Include="Entities\Door.cs" />
     <Compile Include="NarBox\NarBox.cs" />
+    <Compile Include="Player\Bullet.cs" />
     <Compile Include="Player\PlayerInteractor.cs" />
+    <Compile Include="Scenes\Level.cs" />
     <Compile Include="Scenes\Scene1.cs" />
     <Compile Include="Tiles\Background.cs" />
     <Compile Include="Game1.cs" />
